@@ -1,1 +1,8 @@
 TDA220 Assisted Living
+
+To get it running:
+
+1. make a user library named JavaFX11 and add all .jar files in the javafx-sdk... folder
+2. make a user library named EclipsePaho and add the .jar file mqtt-client-0.4.0
+3. in run configurations set VM arguments to "--module-path "**YOUR PATH**\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml"
+
